--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ libp2p = { version = "0.54.1", features = ["full"] }
 tokio = { version = "1.39.2", features = ["full"] }
 bytes = { version = "1.7.1", features = ["std", "serde"] }
 serde = { version = "1.0.204", features = ["derive"] }
+void = "1.0.2"
 
 
 [package]
@@ -22,6 +23,7 @@ libp2p = {workspace = true}
 tokio = {workspace = true}
 bytes = {workspace = true}
 serde = {workspace = true}
+void = {workspace = true}
 
 disrupted-data-sdk-rs = {path = "./disrupted-data-sdk-rs"}
 toml = "0.8.16"
@@ -30,7 +32,8 @@ tracing-subscriber = "0.3.18"
 uuid = { version = "1.10.0", features = ["v4"] }
 clap = { version = "4.5.11", features = ["derive"] }
 libp2p-stream = "0.1.0-alpha.1"
-void = "1.0.2"
 secp256k1 = { version = "0.29.0", features = ["rand-std"] }
 hex = "0.4.3"
 sha2 = "0.10.8"
+either = "1.13.0"
+log = "0.4.22"
