--- a/disrupted-data-sdk-rs/Cargo.toml
+++ b/disrupted-data-sdk-rs/Cargo.toml
@@ -12,6 +12,8 @@ libp2p = {workspace = true}
 tokio = {workspace = true}
 bytes = {workspace = true}
 serde = {workspace = true}
+void = {workspace = true}
+
 futures = "0.3.30"
 secp256k1 = { version = "0.29.0", features = ["rand-std"] }
 sha2 = "0.10.8"
